refactor: 统一日志服务 API，修复操作日志未记录问题
- 新增 LogEntry record 类型，统一日志参数模型
- 简化 LogService 接口，删除 6 个重载方法
- 重构 LogServiceImpl，消除重复代码（~250行 -> ~110行）
- 修复 AsyncConfig 中 taskExecutor 缺少 SecurityContext 传递的问题
- 更新所有调用方使用新的统一 API

根本原因：taskExecutor 未配置 SecurityContextTaskDecorator，
导致 @Async 方法中 SecurityContext 丢失，操作日志被跳过。